manifests/xyzapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xyzapp
spec:
  selector:
    matchLabels:
      app: xyzapp
  template:
    metadata:
      labels:
        app: xyzapp
    spec:
      containers:
      - name: xyzapp
        image: xyzacrliatrio.azurecr.io/xyzapp:f0a34fdd215ca37bac3d5906246c799a6dbf224a
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
